@@ -1,0 +1,13 @@
+"""
+
+One hundred people are standing in a circle in an order 1 to 100.
+
+No.1 has a sword. He kills the next person (i.e., no. 2) and gives the sword to the next (i.e., no. 3). All person does the same until only one survives.
+Which number survives at last?
+
+Answer is an integer. Just put the number without any decimal places if it's an integer. If the answer is Infinity, output Infinity.
+Feel free to get in touch with us if you have any questions
+
+"""
+
+answer = 73
